<?xml version="1.0"?>
<package>
  <name>lwr_end_eff</name>
  <version>1.0.0</version>
  <description>This package contains the model files for the lwr_end_eff</description>

  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
